Проходят тесты postman по сущности Compilation